kubernetes/apps/media/seerr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Seerr
    gethomepage.dev/group: Media
    gethomepage.dev/icon: seerr.png
    gethomepage.dev/description: Media Request Agent
    gethomepage.dev/href: https://seerr.${SECRET_DOMAIN}
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: websecure
  hostnames:
    - "seerr.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: chain-no-auth
      backendRefs:
        - name: seerr
          port: 80
