kubernetes/apps/media/seerr/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: seerr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: seerr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik-external-network
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: crunchy-postgres-pgbouncer
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toFQDNs:
        - matchName: api.github.com
        - matchName: api.themoviedb.org
        - matchName: api.thetvdb.com
        - matchName: image.tmdb.org
        - matchName: plex.tv
        - matchName: discover.provider.plex.tv
        - matchPattern: "*.plex.tv"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
